package it.unisa.diem.wordageddon_g16.controllers;

import it.unisa.diem.wordageddon_g16.db.DAO;
import it.unisa.diem.wordageddon_g16.models.Document;

public class GameSessionController {

    public GameSessionController(DAO<Document> document, DAO<String> stopword, DAO<Object> wdm) {
    }
}
