package it.unisa.diem.wordageddon_g16.controllers;

import it.unisa.diem.wordageddon_g16.db.DAO;

public class LeaderboardController {
    public LeaderboardController(DAO<Object> gameReport) {
    }
}
