package it.unisa.diem.wordageddon_g16.controllers;

public class MainMenuController {
    public <T> MainMenuController() {
    }
}
