package it.unisa.diem.wordageddon_g16.controllers;

import it.unisa.diem.wordageddon_g16.db.DAO;

public class UserPanelController {
    public UserPanelController(DAO<Object> user, DAO<Object> gameReport) {
    }
}
