package it.unisa.diem.wordageddon_g16.models;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD
}
