@startuml

' ========== services ==========
package services{
    class Config{
        - {static} PROPS: Properties
        + {static} DB_URL: String

        - {static} get(key: String): String
    }

    class SystemLogger {
        - logger: Logger {static}
        + log(msg: String, e: Throwable) {static}
    }

    class AuthService {
        - userDAO: UserDAO
        + login(username: String, password: String): boolean
        + register(user: User): boolean
    }



}
' ========== MODEL ==========
package model {

    enum Difficulty {
        EASY
        MEDIUM
        HARD
    }

  class User {
    - name: String
    - password: String
    - isAdmin: boolean
  }

  class GameContext {

  }
  GameContext --> Difficulty


  class GameReport{
    - id: long
    - user: User
    - timestamp: LocalDateTime
    - difficulty: Difficulty
    - maxTime: Duration
    - elapsedTime: Duration
    - questionCount: Int
    - score: Int
  }
  GameReport --> Difficulty
  GameReport --> User


  class Document {
    - id: long
    - title: String
    - path: String
    - wordCount: Int
  }

  class WDM {
    - document: Document
    - occurrences: Map<String, Int>
  }
  WDM --> Document
}

' ========== JDBC ==========
package db{
    interface DAO<T> {
        + selectById(id: Object): Optional<T>
        + selectAll(): List<T>
        + insert(T t)
        + void update(T t)
        + void delete(T t)
    }

    abstract class JdbcDAO<T> extends DAO<T> {
        # connection: Connection
        + JdbcDAO(connection: Connection)
        + query(sql: String, params... :Object): ResultSet
    }

    class UserDAO extends JdbcDAO<User>{
    }

    class GameReportDAO extends JdbcDAO<GameReport> {
    }

    class DocumentDAO extends JdbcDAO<Document> {
    }

    class WdmDAO extends JdbcDAO<WDM> {
    }

    class StopWordDAO extends JdbcDAO<String> {
        + selectById(id) <<Unsupported operation>> /'useless in this context'/
    }

    UserDAO ..> User
    GameReportDAO ..> GameReport
    DocumentDAO ..> Document
    WdmDAO ..> WDM

}


' ========== CONTROLLERS ==========
package controller{

  class AuthController {
  }
  class MainMenuController {

  }
  class GameSessionController {
  }
  class UserPanelController {
  }
  class LeaderboardController {
  }

  'AuthController --> AuthService
}

@enduml
